--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,7 +31,8 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link id="tabicon" rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <link
       rel="apple-touch-icon"
       sizes="76x76"
