--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,6 +42,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <title>TigerChat</title>
   </head>
   <body>
